[@mantine/core] Drawer: Fix double scrollbar appearing when `offset` and `scrollAreaComponent` props are set

--- a/packages/@mantine/core/src/components/Drawer/Drawer.module.css
+++ b/packages/@mantine/core/src/components/Drawer/Drawer.module.css
@@ -17,7 +17,7 @@
   height: var(--drawer-height, calc(100% - var(--drawer-offset) * 2));
   margin: var(--drawer-offset);
   max-width: 100%;
-  max-height: 100%;
+  max-height: calc(100% - var(--drawer-offset) * 2);
   overflow-y: auto;
 }
 
